Make jotho pokemon obtainable